--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!----- Course ----->
 
-    <section class="course">
+    <section class="projects">
       <h1>Projects</h1>
       <img src="Screenshot 2023-09-11 at 6.10.21 PM.png">
 
@@ -60,7 +60,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias placeat quas praesentium sapiente minima voluptate odio, ex odit officiis enim obcaecati? Suscipit commodi doloribus maiores minus saepe doloremque, corporis ut!</p>
         </div>
         <div class="course-col">
-          <h3>Post Graduate</h3>
+          <h3>Bullet Journal</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias placeat quas praesentium sapiente minima voluptate odio, ex odit officiis enim obcaecati? Suscipit commodi doloribus maiores minus saepe doloremque, corporis ut!</p>
         </div>
       </div>
